# editing-diffusion

./: README.md  pyproject.toml
editing_diffusion/: demo.ipynb  llm_objects.py
editing_diffusion/detectors/: base.py  owlvitv2.py
editing_diffusion/diffusion_models/: __init__.py  stablediffusionxl_pipeline.py
editing_diffusion/editing/: __init__.py  attention_processor.py  show_attention.py
editing_diffusion/utils/: __init__.py  detection.py  spot_object_template.py
